--- a/src/main/webapp/css/example.css
+++ b/src/main/webapp/css/example.css
@@ -208,8 +208,8 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 20px;
-  color: #333333;
-  background-color: #ffffff;
+  color: ##D1DADA;
+  background-color: #D1DADA;
 }
 /*a {
   color: #0088cc;
