Ultima version Crear Partido Mis Partidos.

--- a/src/main/webapp/css/example.css
+++ b/src/main/webapp/css/example.css
@@ -1635,10 +1635,10 @@ input[type="submit"].btn.btn-mini {
   Code example styles
 */
 body {
-  background: #fcfcfc;
+  background: #DDE3E3;
   -webkit-font-smoothing: antialiased;
   font: normal 15px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #232525;
+  color: #DDE3E3;
 }
 
 .nav {
