--- a/src/main/webapp/css/estilos.css
+++ b/src/main/webapp/css/estilos.css
@@ -17,7 +17,7 @@
 .separador{
 	width: 100%;
 	margin: 10px auto;
-	background: rgba(24,8,33,.9);
+	background: rgba(18, 17, 18, 0.9);
 	color: #fff;
 	box-shadow: 0 5px 5px 3px rgba(0, 0, 0, 0.25);
 	height: 100px;
