--- a/src/main/webapp/css/parallax.css
+++ b/src/main/webapp/css/parallax.css
@@ -16,6 +16,36 @@ background-attachment: fixed; /* Establecemos una posicion fija para la imagen *
 font-family:helvetica, arial, sans-serif;
 line-height:20px;
 }
+
+.cuerpo-1 {
+background-image: url(../images/estadios-futbol-wallpapers-3.jpg); /* Nuestra imagen de fondo */
+background-repeat:no-repeat; /* Indicamos que no se repetira */
+background-size:cover; /* Encajamos la imagen al 100% del ancho */
+background-attachment: fixed; /* Establecemos una posicion fija para la imagen */
+ 
+font-family:helvetica, arial, sans-serif;
+line-height:20px;
+}
+
+.cuerpo-2 {
+background-image: url(../images/maxresdefault.jpg); /* Nuestra imagen de fondo */
+background-repeat:no-repeat; /* Indicamos que no se repetira */
+background-size:cover; /* Encajamos la imagen al 100% del ancho */
+background-attachment: fixed; /* Establecemos una posicion fija para la imagen */
+ 
+font-family:helvetica, arial, sans-serif;
+line-height:20px;
+}
+
+.cuerpo-3 {
+background-image: url(../images/12tunnel-master1050.jpg); /* Nuestra imagen de fondo */
+background-repeat:no-repeat; /* Indicamos que no se repetira */
+background-size:cover; /* Encajamos la imagen al 100% del ancho */
+background-attachment: fixed; /* Establecemos una posicion fija para la imagen */
+ 
+font-family:helvetica, arial, sans-serif;
+line-height:20px;
+}
  
 .contenedor {
 width: 90%;
